--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -56,12 +56,24 @@ jobs:
 
       - name: Initialize database
         run: |
-
+          if [ ! -f init.sql ]; then echo "init.sql not found!"; exit 1; fi
           mysql -h 127.0.0.1 -uroot -proot test_data < init.sql
 
       - name: Run Pytest
         run: |
           pytest --maxfail=1 -vv -s --continue-on-error --disable-warnings --alluredir=allure-results
+
+      - name: Generate Allure HTML report
+        if: always()
+        run: |
+            pip install allure-commandline
+            allure generate allure-results -o allure-report --clean
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./allure-report
 
       - name: Generate Allure Report
         run: |
