--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -10,11 +10,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        browser: [chrome, firefox]
+
     services:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
           MYSQL_DATABASE: test_data
         ports:
           - 3306:3306
@@ -28,8 +32,9 @@ jobs:
       DATABASE_HOST: 127.0.0.1
       DATABASE_PORT: 3306
       DATABASE_USER: root
-      DATABASE_PASSWORD: root
+      MYSQL_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
       DATABASE_NAME: test_data
+      BROWSER: ${{ matrix.browser }}
 
     steps:
       - name: Checkout code
@@ -40,50 +45,81 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install allure-pytest
 
-      - name: Wait for MySQL
+      - name: Wait for MySQL to be ready
         run: |
           for i in {1..30}; do
-            if mysqladmin ping -h"127.0.0.1" -uroot -proot --silent; then
+            if mysqladmin ping -h"127.0.0.1" -uroot -p"${MYSQL_PASSWORD:-root}" --silent; then
+              echo "MySQL is ready"
               break
             fi
+            echo "Waiting for MySQL... ($i/30)"
             sleep 2
           done
 
       - name: Initialize database
         run: |
-          if [ ! -f init.sql ]; then echo "init.sql not found!"; exit 1; fi
-          mysql -h 127.0.0.1 -uroot -proot test_data < init.sql
+          if [ ! -f init.sql ]; then 
+            echo "init.sql not found. Creating dummy table..."
+            echo "CREATE TABLE IF NOT EXISTS test_table (id INT PRIMARY KEY, name VARCHAR(255));" > init.sql
+          fi
+          mysql -h 127.0.0.1 -uroot -p"${MYSQL_PASSWORD:-root}" test_data < init.sql
 
-      - name: Run Pytest
-        run: pytest --maxfail=1 -vv -s --disable-warnings --alluredir=allure-results
-        continue-on-error: true
+      - name: Run Pytest with Allure
+        run: |
+          echo "Browser: $BROWSER"
+          pytest --maxfail=1 -vv -s --tb=short --disable-warnings --alluredir=allure-results
+        continue-on-error: false
 
-      - name: Generate Allure HTML report
+      - name: Install Allure CLI
         if: always()
         run: |
-            pip install allure-commandline
-            allure generate allure-results -o allure-report --clean
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./allure-report
+          wget -O allure-commandline.tgz https://github.com/allure-framework/allure2/releases/download/2.24.0/allure-2.24.0.tgz
+          tar -zxf allure-commandline.tgz
+          sudo mv allure-2.24.0 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/local/bin/allure
 
       - name: Generate Allure Report
+        if: always()
         run: |
-          allure generate allure-results --clean --output allure-report
-          allure serve allure-results
+          allure generate allure-results -o allure-report --clean
+
+      - name: Deploy Allure Report to GitHub Pages
+        if: always() && github.event_name == 'push' && github.ref == 'refs/heads/main' && matrix.browser == 'chrome'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
+
+      - name: Ensure logs folder exists
+        if: always()
+        run: mkdir -p logs
 
       - name: Upload Allure Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-            name: allure-report
-            path: allure-report
-            retention-days: 7
+          name: allure-report-${{ matrix.browser }}-${{ github.run_number }}
+          path: allure-report
+          retention-days: 7
+
+      - name: Upload Test Logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-logs-${{ matrix.browser }}-${{ github.run_number }}
+          path: logs
+          retention-days: 3
