--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -10,11 +10,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      pages: write
+
     services:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_USER: root
           MYSQL_DATABASE: test_data
         ports:
           - 3306:3306
@@ -28,7 +33,7 @@ jobs:
       DATABASE_HOST: 127.0.0.1
       DATABASE_PORT: 3306
       DATABASE_USER: root
-      DATABASE_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+      DATABASE_PASSWORD: root
       DATABASE_NAME: test_data
 
     steps:
@@ -57,7 +62,7 @@ jobs:
       - name: Wait for MySQL
         run: |
           for i in {1..30}; do
-            if mysqladmin ping -h"127.0.0.1" -uroot -p${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }} --silent; then
+            if mysqladmin ping -h"127.0.0.1" -uroot -proot --silent; then
               echo "MySQL is ready!"
               break
             fi
@@ -71,7 +76,7 @@ jobs:
             echo "init.sql not found! Creating a dummy one for demo."
             echo "CREATE TABLE IF NOT EXISTS test_table (id INT PRIMARY KEY, name VARCHAR(255));" > init.sql
           fi
-          mysql -h 127.0.0.1 -uroot -p${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }} test_data < init.sql
+          mysql -h 127.0.0.1 -uroot -proot test_data < init.sql
 
       - name: Run Pytest with Allure
         run: |
