--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -52,6 +52,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      - name: Install ChromeDriver
+        run: |
+          CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          wget -q https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -77,9 +85,14 @@ jobs:
           fi
           mysql -h 127.0.0.1 -uroot -proot test_data < init.sql
 
+      - name: Kill existing Chrome processes
+        run: |
+          pkill -f chromedriver || true
+          pkill -f chrome || true
+
       - name: Run Pytest with Allure
         run: |
-          pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results
+          pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results -n 0
         continue-on-error: false
 
       - name: Install Allure CLI
