--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Run Pytest with Allure
         run: |
-          pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results -n 0
+          pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results
         continue-on-error: false
 
       - name: Install Allure CLI
