--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -52,26 +52,43 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install Google Chrome
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip fonts-liberation libatk-bridge2.0-0 libatk1.0-0 \
             libcairo2 libcups2 libdrm2 libgbm1 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 \
             libu2f-udev libx11-xcb1 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 xdg-utils
+
+      - name: Install Google Chrome
+        run: |
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
           rm google-chrome-stable_current_amd64.deb
-          google-chrome --version
+          google-chrome --version || { echo "Failed to run google-chrome --version"; exit 1; }
 
       - name: Install ChromeDriver
         run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          CHROMEDRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-          wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-          chromedriver --version
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' || echo "")
+          if [ -z "$CHROME_VERSION" ]; then
+            echo "Could not determine Chrome version, falling back to latest ChromeDriver"
+            CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE || echo "")
+          else
+            CHROMEDRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}" || echo "")
+            if [ -z "$CHROMEDRIVER_VERSION" ]; then
+              echo "No ChromeDriver version found for Chrome $CHROME_VERSION, falling back to latest"
+              CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE || echo "")
+            fi
+          fi
+          if [ -z "$CHROMEDRIVER_VERSION" ]; then
+            echo "Failed to determine ChromeDriver version, using default version 128.0.6613.84"
+            CHROMEDRIVER_VERSION="128.0.6613.84"
+          fi
+          echo "Installing ChromeDriver version: $CHROMEDRIVER_VERSION"
+          wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" || { echo "Failed to download ChromeDriver"; exit 1; }
+          unzip chromedriver_linux64.zip || { echo "Failed to unzip ChromeDriver"; exit 1; }
+          sudo mv chromedriver /usr/local/bin/ || { echo "Failed to move ChromeDriver"; exit 1; }
+          sudo chmod +x /usr/local/bin/chromedriver || { echo "Failed to set ChromeDriver permissions"; exit 1; }
+          chromedriver --version || { echo "Failed to verify ChromeDriver version"; exit 1; }
 
       - name: Install dependencies
         run: |
