--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -112,6 +112,7 @@ jobs:
         run: |
           pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results --headless
         continue-on-error: false
+        timeout-minutes: 15
 
       - name: Install Allure CLI
         if: always()
