--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,10 +7,17 @@ timeout: 30                       # Default timeout in seconds
 retry_attempts: 3                 # Number of retry attempts for browser startup
 window_size: "1920,1080"         # Browser window size (width,height)
 
-# Test Configuration
-test_timeout: 60                  # Test timeout in seconds
-implicit_wait: 10                 # Implicit wait time in seconds
-page_load_timeout: 30            # Page load timeout in seconds
+# Test Configuration - Increased timeouts for CI environment
+test_timeout: 120                 # Test timeout in seconds (increased from 60)
+implicit_wait: 15                 # Implicit wait time in seconds (increased from 10)
+page_load_timeout: 60            # Page load timeout in seconds (increased from 30)
+script_timeout: 30               # Script execution timeout
+
+# Network and Performance Configuration
+enable_images: false             # Disable image loading for faster performance
+enable_javascript: false        # Disable JavaScript for faster loading
+connection_timeout: 60           # Connection timeout for network requests
+read_timeout: 120               # Read timeout for network requests
 
 # Logging Configuration
 log_level: INFO                   # Options: DEBUG, INFO, WARNING, ERROR
@@ -27,3 +34,9 @@ enable_screenshots: true
 # enable_network: true
 # enable_database: true
 # enable_console: true
+
+# CI/CD Specific Settings
+ci_mode: true                    # Enable CI-specific optimizations
+max_wait_time: 30               # Maximum wait time for elements
+retry_on_failure: true          # Retry operations on failure
+cleanup_on_exit: true           # Clean up resources on test exit
