--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,27 +1,20 @@
 # Selenium Test Configuration
-browser: chrome
-headless: true
-download_directory: ./downloads
-file_type: application/octet-stream
-timeout: 30
-retry_attempts: 3
-window_size: "1920,1080"
+browser: chrome                    # Options: chrome, firefox
+headless: true                    # Run browser in headless mode
+download_directory: ./downloads   # Directory for downloaded files
+file_type: application/octet-stream # MIME type for downloads
+timeout: 30                       # Default timeout in seconds
+retry_attempts: 3                 # Number of retry attempts for browser startup
+window_size: "1920,1080"         # Browser window size (width,height)
 
-# Test Configuration - Increased timeouts for CI environment
-test_timeout: 120
-implicit_wait: 15
-page_load_timeout: 60
-script_timeout: 30
-
-# Network and Performance Configuration
-enable_images: false
-enable_javascript: false
-connection_timeout: 60
-read_timeout: 120
+# Test Configuration
+test_timeout: 60                  # Test timeout in seconds
+implicit_wait: 10                 # Implicit wait time in seconds
+page_load_timeout: 120            # Increased page load timeout in seconds
 
 # Logging Configuration
-log_level: INFO
-log_file: logs/test.log
+log_level: INFO                   # Options: DEBUG, INFO, WARNING, ERROR
+log_file: logs/test.log          # Log file path
 
 base_url: https://www.moneycontrol.com/fixed-income/calculator/state-bank-of-india/fixed-deposit-calculator-SBI-BSB001.html
 
@@ -34,9 +27,3 @@ enable_screenshots: true
 # enable_network: true
 # enable_database: true
 # enable_console: true
-
-# CI/CD Specific Settings
-ci_mode: true
-max_wait_time: 30
-retry_on_failure: true
-cleanup_on_exit: true
