--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.6.0
+psutil==7.0.0
 pycparser==2.22
 Pygments==2.19.2
 PySocks==1.7.1
