--- a/.pylintrc
+++ b/.pylintrc
@@ -29,4 +29,5 @@ disable =
     unused-import,
     unused-variable,
     unused-argument,
-    too-many-nested-blocks
+    too-many-nested-blocks,
+    
