--- a/.github/workflows/selenium_pytest.yml
+++ b/.github/workflows/selenium_pytest.yml
@@ -82,13 +82,13 @@ jobs:
           # Remove any problematic installations
           sudo apt-get remove -y google-chrome-stable || true
           sudo rm -f /usr/local/bin/chromedriver || true
-          
+
           # Install Chrome manually
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg
           echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google.list
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
-          
+
           # Let Selenium auto-download ChromeDriver
           python -c "
           from selenium import webdriver
@@ -103,7 +103,7 @@ jobs:
           print('ChromeDriver setup successful via selenium-manager')
           driver.quit()
           "
-          
+
           google-chrome --version
           echo "Selenium will auto-manage ChromeDriver"
 
@@ -139,13 +139,13 @@ jobs:
       - name: Comprehensive Chrome cleanup
         run: |
           echo "=== Comprehensive Chrome Cleanup ==="
-          
+
           # Kill all Chrome and ChromeDriver processes
           sudo pkill -f chrome || true
           sudo pkill -f chromedriver || true
           sudo killall -9 chrome || true
           sudo killall -9 chromedriver || true
-          
+
           # Clean up Chrome user data directories
           sudo rm -rf /tmp/chrome_user_data_* || true
           sudo rm -rf /tmp/.org.chromium.* || true
@@ -153,20 +153,20 @@ jobs:
           sudo rm -rf /home/runner/tmp/chrome_user_data_* || true
           sudo rm -rf ~/.config/google-chrome* || true
           sudo rm -rf ~/.cache/google-chrome* || true
-          
+
           # Clean up any Chrome lock files
           sudo rm -rf /tmp/.X*-lock || true
           sudo rm -rf /tmp/.X11-unix/X* || true
-          
+
           # Clean up shared memory
           sudo rm -rf /dev/shm/* || true
-          
+
           # Show what processes are still running
           ps aux | grep -E "(chrome|chromedriver)" | grep -v grep || echo "No Chrome processes found"
-          
+
           # Give everything time to clean up
           sleep 3
-          
+
           echo "=== Cleanup Complete ==="
 
       - name: Set proper permissions for temp directories
@@ -205,9 +205,9 @@ jobs:
           export CHROME_NO_SANDBOX=1
           export CHROME_DISABLE_GPU=1
           export CHROME_HEADLESS=1
-          
+
           # Run the tests
-          pytest -vv -s --tb=short --alluredir=allure-results --headless
+          pytest --maxfail=1 -vv -s --tb=short --alluredir=allure-results --headless
         continue-on-error: false
         timeout-minutes: 15
 
