--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = -vv --tb=long --maxfail=1 --disable-warnings --capture=no --html=reports/report.html --self-contained-html --alluredir=allure-results
+addopts = -vv --tb=long --disable-warnings --capture=no --html=reports/report.html --self-contained-html --alluredir=allure-results
+; addopts = -vv --tb=long --maxfail=1 --disable-warnings --capture=no --html=reports/report.html --self-contained-html --alluredir=allure-results
 log_cli = true
 log_level = ERROR
 testpaths = tests
@@ -14,3 +15,15 @@ markers =
     window: tests for multi-window/tab handling
     screenshot: tests that capture screenshots
     performance: tests that measure performance metrics
+    
+# Optional: Set minimum version
+minversion = 6.0
+
+# Optional: Configure test discovery
+python_functions = test_*
+collect_ignore = ["setup.py"]
+
+# Optional: Configure warnings
+filterwarnings =
+    ignore::UserWarning
+    ignore::DeprecationWarning
